<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="29dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvCode"
            android:id="@+id/tvCode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:id="@+id/tvCodeEmp"
            android:minEms="5"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvName"
            android:id="@+id/tvName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:id="@+id/etName"
            android:minEms="10"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLastname"
            android:id="@+id/tvLastname" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:id="@+id/etLastname"
            android:minEms="10"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBirthday"
            android:id="@+id/tvBirthday" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:id="@+id/btnBirthday" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSalary"
            android:id="@+id/tvSalary" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:id="@+id/etSalary"
            android:minEms="10"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llChoice"
        android:visibility="invisible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAccept"
            android:id="@+id/btnAccept"
            android:onClick="btnAcceptClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:id="@+id/btnCancel"
            android:onClick="btnCancelClick"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="563dp"
        android:layout_height="29dp"
        android:layout_weight="0.05"
        android:id="@+id/llNav">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFirst"
            android:id="@+id/btnFirst"
            android:layout_weight="6"
            android:onClick="btnFirstClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBack"
            android:id="@+id/btnBack"
            android:layout_weight="7"
            android:onClick="btnBackClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNumberOf"
            android:id="@+id/btnNumberOf"
            android:layout_weight="1"
            android:clickable="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            android:id="@+id/btnNext"
            android:layout_weight="7"
            android:onClick="btnNextClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLast"
            android:id="@+id/btnLast"
            android:layout_weight="6"
            android:onClick="btnLastClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            android:id="@+id/btnAdd"
            android:layout_weight="0.9"
            android:onClick="btnAddClick"/>

        <Button
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/btnUpdate"
            android:id="@+id/btnUpdate"
            android:onClick="btnUpdateClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDelete"
            android:id="@+id/btnDelete"
            android:onClick="btnDeleteClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSelect"
            android:id="@+id/btnSelect"
            android:onClick="btnSelectClick"/>

    </LinearLayout>

</LinearLayout>
